--- a/vault.html
+++ b/vault.html
@@ -2,438 +2,150 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>Vault Admin Dashboard</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>The Vault - Stanley Cup</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary: #6366f1;
-      --secondary: #8b5cf6;
-      --accent: #22d3ee;
-      --danger: #ef4444;
-      --bg: #000;
-      --glass: rgba(255, 255, 255, 0.03);
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
 
     body {
-      margin: 0;
-      background: var(--bg);
-      color: white;
-      font-family: 'Inter', sans-serif;
-      padding: 20px;
+      background: radial-gradient(circle at top, #0f0f0f, #000000);
+      color: #ffffff;
+      font-family: 'Orbitron', sans-serif;
+      overflow-x: hidden;
+      height: 100vh;
+      background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
+      background-size: cover;
+      position: relative;
     }
 
-    .admin-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 24px;
+    .overlay {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(255, 255, 255, 0.02);
+      backdrop-filter: blur(8px);
+      z-index: 1;
     }
 
-    h1 {
-      font-size: 24px;
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin: 0;
-    }
-
-    .wallet-status {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 8px 16px;
-      border-radius: 16px;
-      font-size: 14px;
-      color: var(--accent);
-    }
-
-    .tab-buttons {
-      display: flex;
-      gap: 12px;
-      margin-bottom: 20px;
-    }
-
-    .tab-button {
-      background: rgba(255, 255, 255, 0.05);
-      border: none;
-      color: #ccc;
-      padding: 10px 18px;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-    }
-
-    .tab-button.active {
-      background: var(--primary);
-      color: white;
-    }
-
-    .tab-content {
-      display: none;
-      animation: fadeIn 0.3s ease forwards;
-    }
-
-    .tab-content.active {
-      display: block;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .form-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-bottom: 24px;
-    }
-
-    .form-group {
+    .vault-container {
+      position: relative;
+      z-index: 2;
+      height: 100%;
       display: flex;
       flex-direction: column;
-    }
-
-    label {
-      font-size: 14px;
-      color: #aaa;
-      margin-bottom: 4px;
-    }
-
-    input, select {
-      padding: 10px;
-      border: 1px solid rgba(255,255,255,0.1);
-      background: var(--glass);
-      border-radius: 8px;
-      color: white;
-    }
-
-    input:focus, select:focus {
-      outline: none;
-      border-color: var(--primary);
-    }
-
-    .submit-btn {
-      background: var(--primary);
-      color: white;
-      font-weight: 600;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .game-list {
-      margin-top: 30px;
-    }
-
-    .game-card {
-      background: var(--glass);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 16px;
-      padding: 20px;
-      margin-bottom: 20px;
-    }
-
-    .game-card h3 {
-      margin: 0 0 10px;
-      color: var(--primary);
-    }
-
-    .game-card .meta {
-      font-size: 14px;
-      color: #ccc;
-      margin-bottom: 10px;
-    }
-
-    .game-card .payout-button {
-      background: var(--secondary);
-      color: white;
-      padding: 10px 14px;
-      border: none;
-      border-radius: 8px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-
-    .modal {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.85);
-      display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 999;
-      display: none;
+      text-align: center;
+      padding: 2rem;
     }
 
-    .modal.active {
-      display: flex;
+    .glitch-title {
+      font-size: 2.5rem;
+      color: #00ffe1;
+      text-shadow: 0 0 5px #00ffe1, 0 0 10px #00ffe1;
+      margin-bottom: 1.5rem;
     }
 
-    .modal-box {
-      background: #1a1a1a;
-      padding: 30px;
-      border-radius: 16px;
+    .game-box {
+      background: rgba(0, 0, 0, 0.6);
+      border: 1px solid #00ffe1;
+      border-radius: 12px;
+      padding: 1.5rem;
       width: 90%;
       max-width: 400px;
-      color: white;
+      box-shadow: 0 0 15px rgba(0, 255, 225, 0.2);
     }
 
-    .modal-box h2 {
-      margin-top: 0;
-      color: var(--primary);
+    .game-title {
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
+      color: #ffffff;
     }
 
-    .close-modal {
-      background: none;
+    .game-details {
+      font-size: 1rem;
+      color: #ccc;
+      margin-bottom: 1rem;
+    }
+
+    .buy-button {
+      padding: 0.8rem 1.5rem;
+      font-size: 1rem;
+      background: #00ffe1;
       border: none;
-      font-size: 24px;
-      color: #888;
-      float: right;
+      border-radius: 8px;
+      color: #000;
+      font-weight: bold;
       cursor: pointer;
+      transition: 0.3s ease all;
     }
 
-    .back-btn {
-      background: none;
-      color: var(--accent);
-      text-decoration: underline;
-      cursor: pointer;
-      font-size: 14px;
-      margin-top: 20px;
+    .buy-button:hover {
+      background: #0ff;
+      transform: scale(1.05);
     }
   </style>
 </head>
+
+  </head>
 <body>
-  <div class="admin-header">
-    <h1>Vault Admin</h1>
-    <div class="wallet-status" id="walletStatus">Connecting...</div>
-  </div>
-
-  <div class="tab-buttons">
-    <button class="tab-button active" data-tab="games">Manage Games</button>
-    <button class="tab-button" data-tab="payouts">Payout Panel</button>
-  </div>
-
-  <div id="games" class="tab-content active">
-    <form id="addGameForm">
-      <div class="form-grid">
-        <div class="form-group">
-          <label>League</label>
-          <select name="league" required>
-            <option value="NHL">NHL</option>
-            <option value="NBA">NBA</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label>Game Date/Time</label>
-          <input type="datetime-local" name="datetime" required>
-        </div>
-        <div class="form-group">
-          <label>Team 1</label>
-          <select name="team1" required></select>
-        </div>
-        <div class="form-group">
-          <label>Team 2</label>
-          <select name="team2" required></select>
-        </div>
-        <div class="form-group">
-          <label>Square Price (Y2K)</label>
-          <input type="number" name="squarePrice" value="200000" required>
-        </div>
-        <div class="form-group">
-          <label>Total Squares per Team</label>
-          <input type="number" name="maxSquares" value="50" required>
-        </div>
-      </div>
-      <button type="submit" class="submit-btn">Add Game</button>
-    </form>
-
-    <div class="game-list" id="gameList">
-      <!-- Games will render here -->
+  <div class="overlay"></div>
+  <div class="vault-container">
+    <div class="glitch-title">Welcome to the Vault</div>
+    
+    <div class="game-box">
+      <div class="game-title">Stanley Cup Finals – Game 1</div>
+      <div class="game-details">Buy-in: 100 Y2K<br>Pot Total: 4,200 Y2K</div>
+      <button class="buy-button">Buy a Square</button>
     </div>
   </div>
 
-   <div id="payouts" class="tab-content">
-    <div id="payoutList">
-      <!-- Finished games with payout button will show here -->
-    </div>
+  <!-- User wallet display -->
+  <div class="wallet-info">
+    <img src="https://raw.githubusercontent.com/Y2KCoin/assets/main/y2k-logo.png" alt="Y2K Token" class="token-logo">
+    <div id="walletAddress">0x123...abcd</div>
+    <div id="walletBalance">8,732,109 Y2K</div>
   </div>
 
-  <div id="payoutModal" class="modal">
-    <div class="modal-box">
-      <button class="close-modal" onclick="closeModal()">&times;</button>
-      <h2>Manual Payout</h2>
-      <div id="payoutDetails"></div>
-      <button class="submit-btn" onclick="confirmPayout()">Mark as Paid</button>
-    </div>
-  </div>
+  <style>
+    .wallet-info {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #00ffe1;
+      border-radius: 10px;
+      padding: 0.75rem 1rem;
+      font-size: 0.9rem;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      z-index: 10;
+      backdrop-filter: blur(6px);
+    }
+
+    .wallet-info div {
+      color: #00ffe1;
+    }
+
+    .token-logo {
+      width: 24px;
+      height: 24px;
+    }
+  </style>
 
   <script>
-    const ADMIN_WALLET = '0x348c2F06C64b4465f90446Fd806aFf3A01220450'.toLowerCase();
-    let currentWallet = null;
-    let games = JSON.parse(localStorage.getItem('vaultGames') || '[]');
-    let selectedPayoutGame = null;
+    // Placeholder for future integration
+    const walletAddress = "0x348c...0450";
+    const y2kBalance = "8,732,109 Y2K";
 
-    const TEAMS = {
-      NBA: {
-        LAL: "Los Angeles Lakers",
-        BOS: "Boston Celtics",
-        GSW: "Golden State Warriors",
-        DEN: "Denver Nuggets"
-      },
-      NHL: {
-        FLA: "Florida Panthers",
-        EDM: "Edmonton Oilers",
-        NYR: "New York Rangers",
-        DAL: "Dallas Stars"
-      }
-    };
-
-    // Wallet Connect (Simulated)
-    async function connectWallet() {
-  // Simulate wallet connection (replace this with actual provider request in production)
-  const simulatedWallet = '0x348c2F06C64b4465f90446Fd806aFf3A01220450'; // replace this with the actual connected wallet logic
-  currentWallet = simulatedWallet.toLowerCase();
-  
-  document.getElementById('walletStatus').textContent = 'Connected: ' +
-    currentWallet.slice(0, 6) + '...' + currentWallet.slice(-4);
-
-  if (currentWallet !== ADMIN_WALLET) {
-    document.body.innerHTML = `
-      <div style="text-align: center; padding-top: 100px;">
-        <h1 style="color: #ef4444;">Access Denied</h1>
-        <p style="color: #aaa;">Admin wallet required to access this dashboard.</p>
-      </div>
-    `;
-    return;
-  }
-
-  // Continue rendering dashboard
-  populateTeamDropdowns('NBA');
-  renderGameList();
-  renderPayoutList();
-}
-
-    // Tabs
-    document.querySelectorAll('.tab-button').forEach(btn => {
-      btn.addEventListener('click', () => {
-        document.querySelector('.tab-button.active').classList.remove('active');
-        document.querySelector('.tab-content.active').classList.remove('active');
-        btn.classList.add('active');
-        document.getElementById(btn.dataset.tab).classList.add('active');
-      });
-    });
-
-    // Form Setup
-    const form = document.getElementById('addGameForm');
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(form).entries());
-
-      const game = {
-        id: `game-${Date.now()}`,
-        league: data.league,
-        team1: {
-          code: data.team1,
-          name: TEAMS[data.league][data.team1],
-          squares: 0
-        },
-        team2: {
-          code: data.team2,
-          name: TEAMS[data.league][data.team2],
-          squares: 0
-        },
-        datetime: data.datetime,
-        squarePrice: parseInt(data.squarePrice),
-        maxSquares: parseInt(data.maxSquares),
-        status: {
-          type: 'upcoming',
-          detail: 'Upcoming'
-        },
-        payoutSent: false
-      };
-
-      games.push(game);
-      localStorage.setItem('vaultGames', JSON.stringify(games));
-      form.reset();
-      populateTeamDropdowns(data.league);
-      renderGameList();
-    });
-
-    form.league.addEventListener('change', (e) => {
-      populateTeamDropdowns(e.target.value);
-    });
-
-    function populateTeamDropdowns(league) {
-      const teams = TEAMS[league];
-      const team1 = form.team1;
-      const team2 = form.team2;
-      team1.innerHTML = '';
-      team2.innerHTML = '';
-      Object.entries(teams).forEach(([code, name]) => {
-        team1.add(new Option(name, code));
-        team2.add(new Option(name, code));
-      });
-    }
-
-    function renderGameList() {
-      const list = document.getElementById('gameList');
-      list.innerHTML = '';
-
-      games.forEach(game => {
-        const div = document.createElement('div');
-        div.className = 'game-card';
-        div.innerHTML = `
-          <h3>${game.team1.name} vs ${game.team2.name}</h3>
-          <div class="meta">${game.league} • ${new Date(game.datetime).toLocaleString()}</div>
-          <div>Status: ${game.status.detail}</div>
-        `;
-        list.appendChild(div);
-      });
-    }
-
-    function renderPayoutList() {
-      const container = document.getElementById('payoutList');
-      container.innerHTML = '';
-
-      games
-        .filter(game => game.status.type === 'finished' && !game.payoutSent)
-        .forEach(game => {
-          const div = document.createElement('div');
-          div.className = 'game-card';
-          div.innerHTML = `
-            <h3>${game.team1.name} vs ${game.team2.name}</h3>
-            <div class="meta">${game.league} • ${new Date(game.datetime).toLocaleString()}</div>
-            <button class="payout-button" onclick="triggerPayout('${game.id}')">Manual Payout</button>
-          `;
-          container.appendChild(div);
-        });
-    }
-
-    function triggerPayout(id) {
-      selectedPayoutGame = games.find(g => g.id === id);
-      document.getElementById('payoutDetails').innerHTML = `
-        <p>Pay winners for:</p>
-        <strong>${selectedPayoutGame.team1.name} vs ${selectedPayoutGame.team2.name}</strong>
-        <p>Total Squares: ${selectedPayoutGame.maxSquares * 2}</p>
-        <p>Square Price: ${selectedPayoutGame.squarePrice.toLocaleString()} Y2K</p>
-      `;
-      document.getElementById('payoutModal').classList.add('active');
-    }
-
-    function closeModal() {
-      document.getElementById('payoutModal').classList.remove('active');
-    }
-
-    function confirmPayout() {
-      selectedPayoutGame.payoutSent = true;
-      localStorage.setItem('vaultGames', JSON.stringify(games));
-      closeModal();
-      renderPayoutList();
-      alert('Payout marked as complete!');
-    }
-
-    connectWallet();
+    document.getElementById('walletAddress').innerText = walletAddress;
+    document.getElementById('walletBalance').innerText = y2kBalance;
   </script>
 </body>
-</html> 
+</html>
