--- a/vault.html
+++ b/vault.html
@@ -105,6 +105,36 @@
     .buy-btn:hover {
       transform: scale(1.03);
     }
+
+    .info-panel {
+      font-size: 13px;
+      color: #ccc;
+      text-align: center;
+      margin-top: 24px;
+      padding: 16px;
+      background: rgba(255,255,255,0.02);
+      border: 1px solid rgba(255,255,255,0.06);
+      border-radius: 12px;
+    }
+
+    .placeholder-grid {
+      margin-top: 24px;
+      height: 180px;
+      border-radius: 12px;
+      background: repeating-linear-gradient(
+        45deg,
+        rgba(255,255,255,0.03),
+        rgba(255,255,255,0.03) 10px,
+        rgba(255,255,255,0.05) 10px,
+        rgba(255,255,255,0.05) 20px
+      );
+      border: 1px dashed rgba(255,255,255,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: rgba(255,255,255,0.3);
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -119,6 +149,12 @@
       <div class="game-title">Stanley Cup Finals – Game 1</div>
       <div class="game-details">Buy-in: 100 Y2K<br>Pot Total: 4,200 Y2K</div>
       <button class="buy-btn">Buy a Square</button>
+    </div>
+
+    <div class="placeholder-grid">[ Square Grid Coming Soon ]</div>
+
+    <div class="info-panel">
+      Pick a square. If your number combo matches the final score, you win the pot. Simple as that.
     </div>
   </div>
 </body>
