--- a/vault.html
+++ b/vault.html
@@ -1,3 +1,4 @@
+<!-- Full working updated vault.html with navigation controls -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,51 +7,43 @@
   <title>Y2K Quantum Vault - Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Space Grotesk', sans-serif;
-    }
-
-    body {
-      background-color: #000;
-      color: #fff;
-      overflow-x: hidden;
-      padding: env(safe-area-inset);
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Space Grotesk', sans-serif; }
+    body { background-color: #000; color: #fff; overflow-x: hidden; padding: env(safe-area-inset); }
     .cyber-grid {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-image:
-        linear-gradient(rgba(99, 102, 241, 0.1) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(99, 102, 241, 0.1) 1px, transparent 1px);
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background-image: linear-gradient(rgba(99, 102, 241, 0.1) 1px, transparent 1px),
+                        linear-gradient(90deg, rgba(99, 102, 241, 0.1) 1px, transparent 1px);
       background-size: 20px 20px;
       transform: perspective(500px) rotateX(60deg);
       animation: gridMove 20s linear infinite;
       z-index: 0;
       opacity: 0.2;
     }
+    @keyframes gridMove { from { background-position: 0 0; } to { background-position: 0 20px; } }
+    .container { position: relative; z-index: 1; max-width: 430px; margin: auto; padding: 16px; }
 
-    @keyframes gridMove {
-      from { background-position: 0 0; }
-      to { background-position: 0 20px; }
+    .header-bar {
+      display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;
     }
-
-    .container {
-      position: relative;
-      z-index: 1;
-      max-width: 430px;
-      margin: auto;
-      padding: 16px;
+    .nav-btn {
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 10px;
+      color: #00ffe1;
+      font-size: 13px;
+      padding: 8px 14px;
+      text-decoration: none;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 6px rgba(0,255,225,0.1);
+      transition: 0.2s ease;
+    }
+    .nav-btn:hover {
+      background: rgba(255,255,255,0.08);
+      transform: scale(1.03);
     }
 
     .wallet-hud {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      display: flex; justify-content: space-between; align-items: center;
       background: rgba(255,255,255,0.05);
       border: 1px solid rgba(255,255,255,0.08);
       border-radius: 12px;
@@ -59,10 +52,7 @@
       backdrop-filter: blur(10px);
     }
 
-    .wallet-hud span {
-      color: #00ffe1;
-      font-size: 14px;
-    }
+    .wallet-hud span { color: #00ffe1; font-size: 14px; }
 
     .glass-panel {
       background: rgba(255,255,255,0.03);
@@ -73,23 +63,11 @@
       margin-top: 16px;
     }
 
-    .game-title {
-      font-size: 20px;
-      color: #fff;
-      margin-bottom: 8px;
-      text-align: center;
-    }
-
-    .game-details {
-      font-size: 14px;
-      color: #aaa;
-      margin-bottom: 16px;
-      text-align: center;
-    }
+    .game-title { font-size: 20px; color: #fff; margin-bottom: 8px; text-align: center; }
+    .game-details { font-size: 14px; color: #aaa; margin-bottom: 16px; text-align: center; }
 
     .buy-btn {
-      display: block;
-      width: 100%;
+      display: block; width: 100%;
       padding: 14px;
       background: linear-gradient(135deg, #6366f1, #8b5cf6);
       color: white;
@@ -101,9 +79,22 @@
       box-shadow: 0 0 10px rgba(99,102,241,0.3);
       transition: 0.2s ease;
     }
+    .buy-btn:hover { transform: scale(1.03); }
 
-    .buy-btn:hover {
-      transform: scale(1.03);
+    .placeholder-grid {
+      margin-top: 24px;
+      height: 180px;
+      border-radius: 12px;
+      background: repeating-linear-gradient(
+        45deg, rgba(255,255,255,0.03), rgba(255,255,255,0.03) 10px,
+        rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px
+      );
+      border: 1px dashed rgba(255,255,255,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: rgba(255,255,255,0.3);
+      font-size: 14px;
     }
 
     .info-panel {
@@ -116,30 +107,17 @@
       border: 1px solid rgba(255,255,255,0.06);
       border-radius: 12px;
     }
-
-    .placeholder-grid {
-      margin-top: 24px;
-      height: 180px;
-      border-radius: 12px;
-      background: repeating-linear-gradient(
-        45deg,
-        rgba(255,255,255,0.03),
-        rgba(255,255,255,0.03) 10px,
-        rgba(255,255,255,0.05) 10px,
-        rgba(255,255,255,0.05) 20px
-      );
-      border: 1px dashed rgba(255,255,255,0.1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: rgba(255,255,255,0.3);
-      font-size: 14px;
-    }
   </style>
 </head>
 <body>
   <div class="cyber-grid"></div>
   <div class="container">
+
+    <div class="header-bar">
+      <a href="https://y2kcoin.org" class="nav-btn">Main Site</a>
+      <a href="vault.html" class="nav-btn">Back to Games</a>
+    </div>
+
     <div class="wallet-hud">
       <span id="wallet">0x348c...0450</span>
       <span id="balance">8,732,109 Y2K</span>
@@ -156,6 +134,7 @@
     <div class="info-panel">
       Pick a square. If your number combo matches the final score, you win the pot. Simple as that.
     </div>
+
   </div>
 </body>
 </html>
