--- a/vault.html
+++ b/vault.html
@@ -1,4 +1,3 @@
-<!-- Full working updated vault.html with navigation controls -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,23 +7,32 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Space Grotesk', sans-serif; }
-    body { background-color: #000; color: #fff; overflow-x: hidden; padding: env(safe-area-inset); }
+    body {
+      background-color: #000; color: #fff; overflow-x: hidden;
+      padding: env(safe-area-inset); scroll-behavior: smooth;
+    }
+
     .cyber-grid {
       position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background-image: linear-gradient(rgba(99, 102, 241, 0.1) 1px, transparent 1px),
-                        linear-gradient(90deg, rgba(99, 102, 241, 0.1) 1px, transparent 1px);
+      background-image: linear-gradient(rgba(99,102,241,0.1) 1px, transparent 1px),
+                        linear-gradient(90deg, rgba(99,102,241,0.1) 1px, transparent 1px);
       background-size: 20px 20px;
       transform: perspective(500px) rotateX(60deg);
       animation: gridMove 20s linear infinite;
-      z-index: 0;
-      opacity: 0.2;
+      z-index: 0; opacity: 0.2;
     }
+
     @keyframes gridMove { from { background-position: 0 0; } to { background-position: 0 20px; } }
-    .container { position: relative; z-index: 1; max-width: 430px; margin: auto; padding: 16px; }
+
+    .container {
+      position: relative; z-index: 1;
+      max-width: 430px; margin: auto; padding: 16px; padding-bottom: 80px;
+    }
 
     .header-bar {
       display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;
     }
+
     .nav-btn {
       background: rgba(255,255,255,0.05);
       border: 1px solid rgba(255,255,255,0.08);
@@ -37,6 +45,7 @@
       box-shadow: 0 0 6px rgba(0,255,225,0.1);
       transition: 0.2s ease;
     }
+
     .nav-btn:hover {
       background: rgba(255,255,255,0.08);
       transform: scale(1.03);
@@ -79,6 +88,7 @@
       box-shadow: 0 0 10px rgba(99,102,241,0.3);
       transition: 0.2s ease;
     }
+
     .buy-btn:hover { transform: scale(1.03); }
 
     .placeholder-grid {
@@ -90,11 +100,8 @@
         rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px
       );
       border: 1px dashed rgba(255,255,255,0.1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: rgba(255,255,255,0.3);
-      font-size: 14px;
+      display: flex; align-items: center; justify-content: center;
+      color: rgba(255,255,255,0.3); font-size: 14px;
     }
 
     .info-panel {
@@ -107,15 +114,99 @@
       border: 1px solid rgba(255,255,255,0.06);
       border-radius: 12px;
     }
+
+    .footer-nav {
+      position: fixed;
+      bottom: 0; left: 0;
+      width: 100%;
+      background: rgba(0,0,0,0.6);
+      border-top: 1px solid rgba(255,255,255,0.08);
+      backdrop-filter: blur(16px);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 10px 0;
+      z-index: 10;
+    }
+
+    .footer-nav button {
+      background: none;
+      border: none;
+      color: #00ffe1;
+      font-size: 13px;
+      font-weight: bold;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    .footer-nav button:hover {
+      color: #22d3ee;
+    }
+
+    .top-button {
+      position: fixed;
+      right: 1rem;
+      bottom: 5rem;
+      background: #00ffe1;
+      color: #000;
+      border: none;
+      padding: 10px 14px;
+      border-radius: 30px;
+      font-size: 12px;
+      font-weight: bold;
+      box-shadow: 0 0 10px rgba(0,255,225,0.4);
+      cursor: pointer;
+      display: none;
+      z-index: 10;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      right: 0;
+      background: rgba(255,255,255,0.04);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 10px;
+      min-width: 160px;
+      z-index: 99;
+      backdrop-filter: blur(10px);
+    }
+
+    .dropdown-content a {
+      color: #00ffe1;
+      padding: 10px 14px;
+      display: block;
+      font-size: 13px;
+      text-decoration: none;
+    }
+
+    .dropdown-content a:hover {
+      background-color: rgba(255,255,255,0.08);
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
   </style>
 </head>
 <body>
   <div class="cyber-grid"></div>
   <div class="container">
-
     <div class="header-bar">
       <a href="https://y2kcoin.org" class="nav-btn">Main Site</a>
-      <a href="vault.html" class="nav-btn">Back to Games</a>
+      <div class="dropdown">
+        <button class="nav-btn">Menu</button>
+        <div class="dropdown-content">
+          <a href="#">Settings</a>
+          <a href="https://discord.gg/y2kcoin">Discord</a>
+          <a href="#">Log Out</a>
+        </div>
+      </div>
     </div>
 
     <div class="wallet-hud">
@@ -135,6 +226,21 @@
       Pick a square. If your number combo matches the final score, you win the pot. Simple as that.
     </div>
 
+      </div>
+
+  <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" class="top-button" id="topBtn">↑ Top</button>
+
+  <div class="footer-nav">
+    <button onclick="window.location.href='vault.html'">All Games</button>
+    <button onclick="alert('Coming Soon')">My Squares</button>
+    <button onclick="alert('Admin Only')">Create Game</button>
   </div>
+
+  <script>
+    const topBtn = document.getElementById("topBtn");
+    window.addEventListener("scroll", () => {
+      topBtn.style.display = window.scrollY > 200 ? "block" : "none";
+    });
+  </script>
 </body>
 </html>
