--- a/vault.html
+++ b/vault.html
@@ -203,7 +203,7 @@
         <button class="nav-btn">Menu</button>
         <div class="dropdown-content">
           <a href="#">Settings</a>
-          <a href="https://discord.gg/y2kcoin">Discord</a>
+          <a href="https://discord.gg/XxtpYNXX4a">Discord</a>
           <a href="#">Log Out</a>
         </div>
       </div>
