--- a/vault.html
+++ b/vault.html
@@ -192,6 +192,36 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
+
+    .status-badge {
+    display: inline-block;
+    font-size: 12px;
+    padding: 4px 8px;
+    border-radius: 6px;
+    font-weight: bold;
+    margin-top: 8px;
+    background: #22d3ee20;
+    color: #22d3ee;
+    border: 1px solid #22d3ee40;
+    text-align: center;
+  }
+  .status-live { background: #34d39920; color: #34d399; border-color: #34d39960; }
+  .status-final { background: #fbbf2420; color: #fbbf24; border-color: #fbbf2460; }
+  .status-paid { background: #8b5cf620; color: #8b5cf6; border-color: #8b5cf640; }
+
+  .pot-animated { animation: potPulse 1s ease-in-out; }
+  @keyframes potPulse {
+    0% { transform: scale(1); color: #fff; }
+    50% { transform: scale(1.1); color: #00ffe1; }
+    100% { transform: scale(1); color: #fff; }
+  }
+
+  .glitch-flicker { animation: flicker 0.2s linear 1; }
+  @keyframes flicker {
+    0%, 100% { opacity: 1; transform: scale(1); }
+    50% { opacity: 0.5; transform: scale(1.02); }
+  }
+    
   </style>
 </head>
 <body>
